--- a/index.html
+++ b/index.html
@@ -100,12 +100,30 @@ res.render('index.ejs');
 
 <br>
 
-<image src="https://f.cloud.github.com/assets/6375258/1893658/4d28d370-7aaa-11e3-9fb0-1cb6e0893bd6.PNG"/>
+<!-- index.ejs -->
+<div class="panel">
+<pre style="font-family:Tahoma;font-size:15px;">
+&lt;!DOCTYPE html&gt;
+&lt;html&gt;
+&lt;head&gt;
+&lt;title&gt;Mongo DB CRUD Operations &lt;/title&gt;
+&lt;/head&gt;
+&lt;body&gt;
+&lt;h2&gt;CRUD operations using Node & Mongo DB &lt;/h2&gt;
+
+&lt;a href="/add"&gt;Add a Product&lt;/ahref&gt; &lt;br&gt;
+&lt;a href="/view/:id"&gt;View a Product&lt;/ahref&gt; &lt;br&gt;
+&lt;a href="/viewall"&gt;View All Products&lt;/ahref&gt; &lt;br&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+</pre>
+</div>
+
 
 <br>
-
 <p>Run the 'accessmongo.js' and access the <font color="blue">http://localhost:3000/</font>, you will see the below page.  You have learned to use the templating engine.</p>   
 
+<!-- Browser Display -->
 <image src="https://f.cloud.github.com/assets/6375258/1893640/78d50cac-7aa8-11e3-8622-4469301353ab.PNG"/>
   
 <h4><a href="#">Accessing MongoDB from Node.js</a></h4>
