--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation | Technoon</title>
+    <title>Technoon | Node & Mongo</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <script src="js/vendor/modernizr.js"></script>
   </head>
@@ -14,8 +14,7 @@
       <div class="nav-bar right">
        <ul class="button-group">
          <li><a href="#" class="button">Home</a></li>
-         <li><a href="#" class="button">About me</a></li>
-         <li><a href="#" class="button">Contact Us</a></li>
+         <li><a href="in.linkedin.com/in/vrkrajesh/" class="button">About me</a></li>
         </ul>
       </div>
       <h1>Technoon <small>Tutorials <br>Node & MongoDB using Mongoose </small></h1>
@@ -275,7 +274,7 @@ function renderResult(res, prds, msg) {
 <!-- Sidebar -->
     <aside class="large-3 columns">
  
-      <h5>Rajesh Writings : </h5>
+      <h5>Rajesh's Writings : </h5>
       <ul class="side-nav">
         <li><a href="http://technoon.github.io/lessons/index.html">Node & MongoDB</a></li>
         <li><a href="http://technoon.github.io/lessons/arduino.html">Arduino Microcontroller</a></li>
@@ -286,8 +285,8 @@ function renderResult(res, prds, msg) {
  
       <div class="panel">
         <h5>Featured</h5>
-        <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow.</p>
-        <a href="#">Read More →</a>
+        <p>Arduino is an open-source electronics platform that can acknowledge and interact with its environment through a variety of sensor types.</p>
+        <a href="http://technoon.github.io/lessons/arduino.html">Read More →</a>
       </div>
  
     </aside>
