--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="large-12 columns">
       <div class="nav-bar right">
        <ul class="button-group">
-         <li><a href="#" class="button">Home</a></li>
-         <li><a href="in.linkedin.com/in/vrkrajesh/" class="button">About me</a></li>
+         <li><a href="#" class="button tiny">Home</a></li>
+         <li><a href="in.linkedin.com/in/vrkrajesh/" class="button tiny">About me</a></li>
         </ul>
       </div>
       <h1>Technoon <small>Tutorials <br>Node & MongoDB using Mongoose </small></h1>
@@ -316,5 +316,3 @@ function renderResult(res, prds, msg) {
  
   </body>
 </html>
-<!-- END OF HTML -->
-
